<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FlashApp</string>
    <string name="file_provider_authority">com.oligark.flashapp</string>
    <!-- Keys -->
    <string name="facebook_app_id">135887747283319</string>
    <string name="fb_login_protocol_scheme">fb135887747283319</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_login_short">Ingresar</string>
    <string name="action_google_sign_in">Ingresar con Google</string>
    <string name="action_fb_sign_in">Ingresar con Facebook</string>
    <string name="error_invalid_email">El email ingresado es inválido</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="find_sitter_selection">Busco cuidador para mi mascota</string>
    <string name="sitter_selection">Cuido mascotas</string>
    <string name="title_activity_customer_main">Inicio</string>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Preferencias</string>
    <string name="title_activity_sitter_main">Inicio</string>
    <string name="title_activity_add_mascota">Agregar Mascota</string>
    <string name="customer_pets_menu_item">Mascotas</string>
    <string name="preferences_menu_item">Preferencias</string>
    <string name="user_option_not_available">Opción aún no disponible</string>
    <string name="customer_history_menu_item">Historial</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_menu_item">Inicio</string>
    <string name="option_select_camera">Cámara</string>
    <string name="option_select_gallery">Galería</string>
    <string name="complete_action_using">Completar la acción con</string>
    <string name="select_user_prompt">Selecciona una imagen</string>
</resources>
